[package]
name = "example_desktop"
version = "0.1.0"
description = "A Phoenix Tauri App"
authors = ["example_desktop"]
license = "Proprietary"
homepage = "example.com"
repository = "example.com"
default-run = "example_desktop"
edition = "2021"
rust-version = "1.77.1"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1", features = [ "shell-sidecar"] }
fix-path-env = { git = "https://github.com/tauri-apps/fix-path-env-rs" }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]

# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
